--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "passport-google-auth-token": "^1.0.7"
   },
   "devDependencies": {
-    "ganache": "^7.9.2"
+    "@truffle/hdwallet-provider": "^2.1.15",
+    "dotenv": "^17.2.3",
+    "ganache": "^7.9.2",
+    "truffle-plugin-verify": "^0.6.7"
   }
 }
