fix: remove secrets from env.example

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,13 +1,13 @@
 # MongoDB Atlas (получи бесплатно на mongodb.com/atlas)
 MONGO_URI=mongodb+srv://username:password@cluster.mongodb.net/meditrace
 
-# Blockchain Configuration (Sepolia Testnet)
+# Blockchain Configuration
 BLOCKCHAIN_NODE_URL=https://ethereum-sepolia-rpc.publicnode.com
-CONTRACT_ADDRESS=0x023e0C3C5b4A02b7adE7b506449Dfb7fB1292546
+CONTRACT_ADDRESS=your_contract_address_here
 
-# Wallet
-OWNER_ADDRESS=0x3fd67A052b0C04C09a558d4427326c5E6F6Ffe1c
-OWNER_PRIVATE_KEY=your_private_key_here
+# Wallet (НЕ используй реальные ключи!)
+OWNER_ADDRESS=your_wallet_address
+OWNER_PRIVATE_KEY=your_private_key_without_0x
 
 # Server
 PORT=5001
