--- a/backend/package.json
+++ b/backend/package.json
@@ -12,10 +12,9 @@
   "description": "",
   "dependencies": {
     "axios": "^1.7.9",
-    "cros": "^1.0.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "ethers": "^6.13.5",
-    "cors-base":"^2.8.11",
     "express": "^4.21.2",
     "fs": "^0.0.1-security",
     "mongodb": "^6.13.0",
